--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
 
     </header>
+    <!-- static test -->
     <div class="col-4 grey-1"></div>
     <div class="col-4 grey-2"></div>
     <div class="col-4 grey-3"></div>
